[package]
name = "luhn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.92"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
